fix the caption is not visible on hover effect

--- a/packages/galleryberg-gallery-block/src/gallery/common.scss
+++ b/packages/galleryberg-gallery-block/src/gallery/common.scss
@@ -67,7 +67,6 @@
 }
 
 // Layout: Square
-.galleryberg-gallery-container.layout-square > figure.galleryberg-image,
 .galleryberg-gallery-container.layout-square > figure.galleryberg-image img {
 	aspect-ratio: 1 / 1;
 	object-fit: cover;
